--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="wrap">
 
         <div class="page-header text-center">
-          <img src="/static/images/2015_website_header_final.jpg">
+          <img src="https://app.oshacademy-atp.com/static/images/2015_website_header_final.jpg">
         </div>
 
       
